--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "deploy": "bash ./deploy.sh"
   },
   "dependencies": {
     "vue": "^3.2.0-beta.1",
